// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nhentai — live snapshots > search: Boudica to Tsukiaidashite Kekkou Tachimashita 1`] = `
[
  {
    "id": "Boudica%20to%20Tsukiaidashite%20Kekkou%20Tachimashita",
    "status": "complete",
    "title": "Boudica to Tsukiaidashite Kekkou Tachimashita",
  },
]
`;

exports[`nhentai — live snapshots > search: Boudica to Tsukiaidashite Kekkou Tachimashita 2`] = `
[
  {
    "number": 1,
    "source_id": "307937",
    "title": "(C97) [Ronpaia (Fue)] Boudica to Tsukiaidashite Kekkou Tachimashita. | It's Been A While Since I Started Dating Boudica. (Fate/Grand Order) [English] [Hive-san]",
    "volume": null,
  },
]
`;

exports[`nhentai — live snapshots > search: Boudica to Tsukiaidashite Kekkou Tachimashita 3`] = `
[
  "https://i.nhentai.net/galleries/1605417/1.jpg",
  "https://i.nhentai.net/galleries/1605417/2.jpg",
  "https://i.nhentai.net/galleries/1605417/3.jpg",
  "https://i.nhentai.net/galleries/1605417/4.jpg",
  "https://i.nhentai.net/galleries/1605417/5.jpg",
  "https://i.nhentai.net/galleries/1605417/6.jpg",
  "https://i.nhentai.net/galleries/1605417/7.jpg",
  "https://i.nhentai.net/galleries/1605417/8.jpg",
  "https://i.nhentai.net/galleries/1605417/9.jpg",
  "https://i.nhentai.net/galleries/1605417/10.jpg",
  "https://i.nhentai.net/galleries/1605417/11.jpg",
  "https://i.nhentai.net/galleries/1605417/12.jpg",
  "https://i.nhentai.net/galleries/1605417/13.jpg",
  "https://i.nhentai.net/galleries/1605417/14.jpg",
  "https://i.nhentai.net/galleries/1605417/15.jpg",
  "https://i.nhentai.net/galleries/1605417/16.jpg",
  "https://i.nhentai.net/galleries/1605417/17.jpg",
  "https://i.nhentai.net/galleries/1605417/18.jpg",
  "https://i.nhentai.net/galleries/1605417/19.jpg",
  "https://i.nhentai.net/galleries/1605417/20.jpg",
  "https://i.nhentai.net/galleries/1605417/21.jpg",
  "https://i.nhentai.net/galleries/1605417/22.jpg",
  "https://i.nhentai.net/galleries/1605417/23.jpg",
  "https://i.nhentai.net/galleries/1605417/24.jpg",
  "https://i.nhentai.net/galleries/1605417/25.jpg",
  "https://i.nhentai.net/galleries/1605417/26.jpg",
  "https://i.nhentai.net/galleries/1605417/27.jpg",
  "https://i.nhentai.net/galleries/1605417/28.jpg",
  "https://i.nhentai.net/galleries/1605417/29.jpg",
  "https://i.nhentai.net/galleries/1605417/30.jpg",
  "https://i.nhentai.net/galleries/1605417/31.jpg",
  "https://i.nhentai.net/galleries/1605417/32.png",
]
`;

exports[`nhentai — live snapshots > search: Emergence 1`] = `
[
  {
    "id": "Emergence",
    "status": "complete",
    "title": "Emergence",
  },
]
`;

exports[`nhentai — live snapshots > search: Emergence 2`] = `
[
  {
    "number": 1,
    "source_id": "326481",
    "title": "[pixiv]Emergence Metamorphosis chapter 8",
    "volume": null,
  },
]
`;

exports[`nhentai — live snapshots > search: Emergence 3`] = `
[
  "https://i.nhentai.net/galleries/1719031/1.jpg",
  "https://i.nhentai.net/galleries/1719031/2.jpg",
  "https://i.nhentai.net/galleries/1719031/3.jpg",
  "https://i.nhentai.net/galleries/1719031/4.jpg",
  "https://i.nhentai.net/galleries/1719031/5.jpg",
  "https://i.nhentai.net/galleries/1719031/6.jpg",
  "https://i.nhentai.net/galleries/1719031/7.jpg",
  "https://i.nhentai.net/galleries/1719031/8.jpg",
  "https://i.nhentai.net/galleries/1719031/9.jpg",
  "https://i.nhentai.net/galleries/1719031/10.jpg",
  "https://i.nhentai.net/galleries/1719031/11.jpg",
  "https://i.nhentai.net/galleries/1719031/12.jpg",
  "https://i.nhentai.net/galleries/1719031/13.jpg",
  "https://i.nhentai.net/galleries/1719031/14.jpg",
  "https://i.nhentai.net/galleries/1719031/15.jpg",
  "https://i.nhentai.net/galleries/1719031/16.jpg",
  "https://i.nhentai.net/galleries/1719031/17.jpg",
  "https://i.nhentai.net/galleries/1719031/18.jpg",
]
`;

exports[`nhentai — live snapshots > search: Inakax 3! Koushuu Yokujou to Koshitsu Sauna de Asedaku Ecchi Hen 1`] = `
[
  {
    "id": "Inakax%203!%20Koushuu%20Yokujou%20to%20Koshitsu%20Sauna%20de%20Asedaku%20Ecchi%20Hen",
    "status": "complete",
    "title": "Inakax 3! Koushuu Yokujou to Koshitsu Sauna de Asedaku Ecchi Hen",
  },
]
`;

exports[`nhentai — live snapshots > search: Inakax 3! Koushuu Yokujou to Koshitsu Sauna de Asedaku Ecchi Hen 2`] = `
[
  {
    "number": 1,
    "source_id": "298368",
    "title": "[ATTIC WORK SPACE (Ryoji)] Inakax 3! Koushuu Yokujou to Koshitsu Sauna de Asedaku Ecchi Hen | Inakax 3! Sweaty in Public Baths and Private Sauna [English] [DesuEx] [Digital]",
    "volume": null,
  },
]
`;

exports[`nhentai — live snapshots > search: Inakax 3! Koushuu Yokujou to Koshitsu Sauna de Asedaku Ecchi Hen 3`] = `
[
  "https://i.nhentai.net/galleries/1555211/1.jpg",
  "https://i.nhentai.net/galleries/1555211/2.jpg",
  "https://i.nhentai.net/galleries/1555211/3.jpg",
  "https://i.nhentai.net/galleries/1555211/4.jpg",
  "https://i.nhentai.net/galleries/1555211/5.jpg",
  "https://i.nhentai.net/galleries/1555211/6.jpg",
  "https://i.nhentai.net/galleries/1555211/7.jpg",
  "https://i.nhentai.net/galleries/1555211/8.jpg",
  "https://i.nhentai.net/galleries/1555211/9.jpg",
  "https://i.nhentai.net/galleries/1555211/10.jpg",
  "https://i.nhentai.net/galleries/1555211/11.jpg",
  "https://i.nhentai.net/galleries/1555211/12.jpg",
  "https://i.nhentai.net/galleries/1555211/13.jpg",
  "https://i.nhentai.net/galleries/1555211/14.jpg",
  "https://i.nhentai.net/galleries/1555211/15.jpg",
  "https://i.nhentai.net/galleries/1555211/16.jpg",
  "https://i.nhentai.net/galleries/1555211/17.jpg",
  "https://i.nhentai.net/galleries/1555211/18.jpg",
  "https://i.nhentai.net/galleries/1555211/19.jpg",
  "https://i.nhentai.net/galleries/1555211/20.jpg",
  "https://i.nhentai.net/galleries/1555211/21.jpg",
  "https://i.nhentai.net/galleries/1555211/22.jpg",
  "https://i.nhentai.net/galleries/1555211/23.jpg",
  "https://i.nhentai.net/galleries/1555211/24.jpg",
  "https://i.nhentai.net/galleries/1555211/25.jpg",
  "https://i.nhentai.net/galleries/1555211/26.jpg",
]
`;

exports[`nhentai — live snapshots > search: Kanojo o Torareta Ano Natsu no Hi 1`] = `
[
  {
    "id": "Kanojo%20o%20Torareta%20Ano%20Natsu%20no%20Hi",
    "status": "complete",
    "title": "Kanojo o Torareta Ano Natsu no Hi",
  },
]
`;

exports[`nhentai — live snapshots > search: Kanojo o Torareta Ano Natsu no Hi 2`] = `
[
  {
    "number": 1,
    "source_id": "567301",
    "title": "[wreathbox] Kanojo o Torareta Ano Natsu no Hi [English] [TranscendScans]",
    "volume": null,
  },
]
`;

exports[`nhentai — live snapshots > search: Kanojo o Torareta Ano Natsu no Hi 3`] = `
[
  "https://i.nhentai.net/galleries/3308767/1.webp",
  "https://i.nhentai.net/galleries/3308767/2.webp",
  "https://i.nhentai.net/galleries/3308767/3.webp",
  "https://i.nhentai.net/galleries/3308767/4.webp",
  "https://i.nhentai.net/galleries/3308767/5.webp",
  "https://i.nhentai.net/galleries/3308767/6.webp",
  "https://i.nhentai.net/galleries/3308767/7.webp",
  "https://i.nhentai.net/galleries/3308767/8.webp",
  "https://i.nhentai.net/galleries/3308767/9.webp",
  "https://i.nhentai.net/galleries/3308767/10.webp",
  "https://i.nhentai.net/galleries/3308767/11.webp",
  "https://i.nhentai.net/galleries/3308767/12.webp",
  "https://i.nhentai.net/galleries/3308767/13.webp",
  "https://i.nhentai.net/galleries/3308767/14.webp",
  "https://i.nhentai.net/galleries/3308767/15.webp",
  "https://i.nhentai.net/galleries/3308767/16.webp",
  "https://i.nhentai.net/galleries/3308767/17.webp",
  "https://i.nhentai.net/galleries/3308767/18.webp",
  "https://i.nhentai.net/galleries/3308767/19.webp",
  "https://i.nhentai.net/galleries/3308767/20.webp",
  "https://i.nhentai.net/galleries/3308767/21.webp",
  "https://i.nhentai.net/galleries/3308767/22.webp",
  "https://i.nhentai.net/galleries/3308767/23.webp",
  "https://i.nhentai.net/galleries/3308767/24.webp",
  "https://i.nhentai.net/galleries/3308767/25.webp",
  "https://i.nhentai.net/galleries/3308767/26.webp",
  "https://i.nhentai.net/galleries/3308767/27.webp",
  "https://i.nhentai.net/galleries/3308767/28.webp",
  "https://i.nhentai.net/galleries/3308767/29.webp",
  "https://i.nhentai.net/galleries/3308767/30.webp",
  "https://i.nhentai.net/galleries/3308767/31.webp",
  "https://i.nhentai.net/galleries/3308767/32.webp",
  "https://i.nhentai.net/galleries/3308767/33.webp",
  "https://i.nhentai.net/galleries/3308767/34.webp",
  "https://i.nhentai.net/galleries/3308767/35.webp",
  "https://i.nhentai.net/galleries/3308767/36.webp",
  "https://i.nhentai.net/galleries/3308767/37.webp",
  "https://i.nhentai.net/galleries/3308767/38.webp",
  "https://i.nhentai.net/galleries/3308767/39.png",
]
`;

exports[`nhentai — live snapshots > search: KayaNetori Kaya-Nee Series Aizou Ban 1`] = `
[
  {
    "id": "KayaNetori%20Kaya-Nee%20Series%20Aizou%20Ban",
    "status": "complete",
    "title": "KayaNetori Kaya-Nee Series Aizou Ban",
  },
]
`;

exports[`nhentai — live snapshots > search: KayaNetori Kaya-Nee Series Aizou Ban 2`] = `
[
  {
    "number": 1,
    "source_id": "254685",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban Ch. 1 [English] [Aoitenshi]",
    "volume": null,
  },
  {
    "number": 2,
    "source_id": "254902",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban Ch. 1 + Bonus [English] [Aoitenshi]",
    "volume": null,
  },
  {
    "number": 3,
    "source_id": "255354",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban Ch. 1 + Bonus [English] [Decensored] [Belldandy100]",
    "volume": null,
  },
  {
    "number": 4,
    "source_id": "255458",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban [English] [Decensored]",
    "volume": null,
  },
  {
    "number": 5,
    "source_id": "517691",
    "title": "[KON-KIT] KayaNetori Kaya-Nee Series Aizou Ban1-21th (English)",
    "volume": null,
  },
  {
    "number": 6,
    "source_id": "616661",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban [English] [Decensored][Colorized][Ongoing]",
    "volume": null,
  },
  {
    "number": 7,
    "source_id": "618105",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban [English] [Decensored][Colorized][Ongoing]",
    "volume": null,
  },
  {
    "number": 8,
    "source_id": "621895",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban [English] [Decensored][Colorized][Ongoing]",
    "volume": null,
  },
  {
    "number": 9,
    "source_id": "624543",
    "title": "[Kon-Kit] KayaNetori Kaya-Nee Series Aizou Ban [English] [Decensored][Colorized][Ongoing]",
    "volume": null,
  },
]
`;

exports[`nhentai — live snapshots > search: KayaNetori Kaya-Nee Series Aizou Ban 3`] = `
[
  "https://i.nhentai.net/galleries/1322650/1.jpg",
  "https://i.nhentai.net/galleries/1322650/2.jpg",
  "https://i.nhentai.net/galleries/1322650/3.jpg",
  "https://i.nhentai.net/galleries/1322650/4.jpg",
  "https://i.nhentai.net/galleries/1322650/5.jpg",
  "https://i.nhentai.net/galleries/1322650/6.jpg",
  "https://i.nhentai.net/galleries/1322650/7.jpg",
  "https://i.nhentai.net/galleries/1322650/8.jpg",
  "https://i.nhentai.net/galleries/1322650/9.jpg",
  "https://i.nhentai.net/galleries/1322650/10.jpg",
  "https://i.nhentai.net/galleries/1322650/11.jpg",
  "https://i.nhentai.net/galleries/1322650/12.jpg",
  "https://i.nhentai.net/galleries/1322650/13.jpg",
  "https://i.nhentai.net/galleries/1322650/14.jpg",
  "https://i.nhentai.net/galleries/1322650/15.jpg",
  "https://i.nhentai.net/galleries/1322650/16.jpg",
  "https://i.nhentai.net/galleries/1322650/17.jpg",
  "https://i.nhentai.net/galleries/1322650/18.jpg",
  "https://i.nhentai.net/galleries/1322650/19.jpg",
  "https://i.nhentai.net/galleries/1322650/20.jpg",
  "https://i.nhentai.net/galleries/1322650/21.jpg",
  "https://i.nhentai.net/galleries/1322650/22.jpg",
  "https://i.nhentai.net/galleries/1322650/23.jpg",
  "https://i.nhentai.net/galleries/1322650/24.jpg",
  "https://i.nhentai.net/galleries/1322650/25.jpg",
  "https://i.nhentai.net/galleries/1322650/26.jpg",
  "https://i.nhentai.net/galleries/1322650/27.jpg",
  "https://i.nhentai.net/galleries/1322650/28.jpg",
  "https://i.nhentai.net/galleries/1322650/29.jpg",
  "https://i.nhentai.net/galleries/1322650/30.jpg",
  "https://i.nhentai.net/galleries/1322650/31.jpg",
  "https://i.nhentai.net/galleries/1322650/32.jpg",
  "https://i.nhentai.net/galleries/1322650/33.jpg",
  "https://i.nhentai.net/galleries/1322650/34.jpg",
  "https://i.nhentai.net/galleries/1322650/35.jpg",
]
`;

exports[`nhentai — live snapshots > search: Skill Kyouka Kaikin + OrangeMaru Special 1`] = `
[
  {
    "id": "Skill%20Kyouka%20Kaikin%20%2B%20OrangeMaru%20Special",
    "status": "complete",
    "title": "Skill Kyouka Kaikin + OrangeMaru Special",
  },
]
`;

exports[`nhentai — live snapshots > search: Skill Kyouka Kaikin + OrangeMaru Special 2`] = `
[
  {
    "number": 1,
    "source_id": "234603",
    "title": "(COMIC1☆13) [OrangeMaru (YD)] Skill Kyouka Kaikin + OrangeMaru Special 04 (FateGrand Order) [English] [N04h]",
    "volume": null,
  },
  {
    "number": 2,
    "source_id": "234638",
    "title": "(COMIC1☆13) [OrangeMaru (YD)] Skill Kyouka Kaikin + OrangeMaru Special 04 (FateGrand Order) [English] [N04h]",
    "volume": null,
  },
  {
    "number": 3,
    "source_id": "271007",
    "title": "(COMIC1☆13) [OrangeMaru (YD)] Skill Kyouka Kaikin + OrangeMaru Special 04 (Fate/Grand Order) [English] [Belldandy100] [Decensored]",
    "volume": null,
  },
]
`;

exports[`nhentai — live snapshots > search: Skill Kyouka Kaikin + OrangeMaru Special 3`] = `
[
  "https://i.nhentai.net/galleries/1230090/1.jpg",
  "https://i.nhentai.net/galleries/1230090/2.jpg",
  "https://i.nhentai.net/galleries/1230090/3.jpg",
  "https://i.nhentai.net/galleries/1230090/4.jpg",
  "https://i.nhentai.net/galleries/1230090/5.jpg",
  "https://i.nhentai.net/galleries/1230090/6.jpg",
  "https://i.nhentai.net/galleries/1230090/7.jpg",
  "https://i.nhentai.net/galleries/1230090/8.jpg",
  "https://i.nhentai.net/galleries/1230090/9.jpg",
  "https://i.nhentai.net/galleries/1230090/10.jpg",
  "https://i.nhentai.net/galleries/1230090/11.jpg",
  "https://i.nhentai.net/galleries/1230090/12.jpg",
  "https://i.nhentai.net/galleries/1230090/13.jpg",
  "https://i.nhentai.net/galleries/1230090/14.jpg",
  "https://i.nhentai.net/galleries/1230090/15.jpg",
  "https://i.nhentai.net/galleries/1230090/16.jpg",
  "https://i.nhentai.net/galleries/1230090/17.jpg",
  "https://i.nhentai.net/galleries/1230090/18.jpg",
  "https://i.nhentai.net/galleries/1230090/19.jpg",
  "https://i.nhentai.net/galleries/1230090/20.jpg",
  "https://i.nhentai.net/galleries/1230090/21.jpg",
  "https://i.nhentai.net/galleries/1230090/22.jpg",
  "https://i.nhentai.net/galleries/1230090/23.jpg",
  "https://i.nhentai.net/galleries/1230090/24.jpg",
  "https://i.nhentai.net/galleries/1230090/25.jpg",
  "https://i.nhentai.net/galleries/1230090/26.jpg",
  "https://i.nhentai.net/galleries/1230090/27.jpg",
  "https://i.nhentai.net/galleries/1230090/28.jpg",
  "https://i.nhentai.net/galleries/1230090/29.jpg",
  "https://i.nhentai.net/galleries/1230090/30.jpg",
  "https://i.nhentai.net/galleries/1230090/31.jpg",
  "https://i.nhentai.net/galleries/1230090/32.jpg",
  "https://i.nhentai.net/galleries/1230090/33.jpg",
  "https://i.nhentai.net/galleries/1230090/34.jpg",
  "https://i.nhentai.net/galleries/1230090/35.jpg",
]
`;
